测试类demo和重写日志类FileAppender

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -35,4 +35,14 @@ log4j.appender.ctmp_1.DatePattern='.'yyyyMMdd_HH'.log'
 log4j.appender.ctmp_1.Encoding = UTF-8
 log4j.appender.ctmp_1.layout=org.apache.log4j.PatternLayout
 log4j.appender.ctmp_1.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS}: [%c:%L] %x %m%n
-        
+
+### WebFileLogAspect###
+log4j.logger.com.example.springbootshiro.demo= DEBUG, fileTest
+
+log4j.appender.fileTest=com.example.springbootshiro.utils.MyDailyRollingFileAppender
+log4j.appender.fileTest.File=/zh/logs/demo/demo
+log4j.appender.fileTest.DatePattern='.'yyyy-MM-dd'.zip'
+log4j.appender.fileTest.Append = true 
+log4j.appender.fileTest.Encoding = UTF-8
+log4j.appender.fileTest.layout=org.apache.log4j.PatternLayout
+log4j.appender.fileTest.layout.ConversionPattern=%d %p [%c] - %m%n
