测试类demo和重写日志类FileAppender

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.password = root
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 
 #mybatis.mapper-locations=classpath*:mapper/*Mapper.xml
+#配置mapper映射
 mybatis.mapperLocations=classpath*:mapper/*.xml
 
 
@@ -35,6 +36,6 @@ spring.datasource.logSlowSql=true
 #mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 #mybatis sql打印到log4j文件
 #mybatis.configuration.log-impl=org.apache.ibatis.logging.slf4j.Slf4jImpl
-
+#mybatis sql打印到log4j文件
 mybatis.configuration.log-impl=org.apache.ibatis.logging.log4j.Log4jImpl
 
