新增权限设置及thymel和shiro整合（页面标签）

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,3 +39,5 @@ spring.datasource.logSlowSql=true
 #mybatis sql打印到log4j文件
 mybatis.configuration.log-impl=org.apache.ibatis.logging.log4j.Log4jImpl
 
+#mybatis的实体类别名包扫描
+mybatis.type-aliases-package=com.example.springbootshiro.ctmp_1.domain
