--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,13 @@
             <scope>test</scope>
         </dependency>
         
+        <!--thymeleaf对shiro的扩展坐标-->
+        <dependency>
+            <groupId>com.github.theborakompanioni</groupId>
+            <artifactId>thymeleaf-extras-shiro</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+        
     </dependencies>
 
     <build>
